@@ -84,6 +84,7 @@ public class HiveConf extends Configuration {
     EXECPARALLEL("hive.exec.parallel", false), // parallel query launching
     EXECPARALLETHREADNUMBER("hive.exec.parallel.thread.number", 8),
     HIVESPECULATIVEEXECREDUCERS("hive.mapred.reduce.tasks.speculative.execution", true),
+    HIVECOUNTERSPULLINTERVAL("hive.exec.counters.pull.interval", 1000L),
     DYNAMICPARTITIONING("hive.exec.dynamic.partition", false),
     DYNAMICPARTITIONINGMODE("hive.exec.dynamic.partition.mode", "strict"),
     DYNAMICPARTITIONMAXPARTS("hive.exec.max.dynamic.partitions", 1000),
